# m2m-planner

./: .gitignore  Procfile  manage.py  pyproject.toml  requirements.txt
calculator/: budget.py  payday.py  urls.py  views.py
calculator/templates/calculator/: index.html
core/: views.py
core/templates/core/: home.html
daily_expensable_web/: asgi.py  settings.py  urls.py  wsgi.py
fixed_costs/: apps.py  urls.py  views.py
fixed_costs/templates/fixed_costs/: index.html
templates/: base.html
